listing locations according to category id implemented, swagger docs updated
